# computer-graphics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine  engine.cc  readme.md
ini/: debug.ini
inis/: debug.ini
inputfiles/: koch_triangle.L2D  peano_gosper_curve.L2D
src/: headers.h
src/types/: line2d.h
src/utils/: create_directory.cc  create_directory.h  my_utils.cc  read_ini_and_lsystem.cc  read_lsystem_from_file.cc  read_lsystem_from_file.h  utils.cc  utils.h
utils/: debug_tools.cc  debug_tools.h  my_utils.cc  my_utils.h  utils.cc  utils.h
